# mat

./: .gitignore  README.md  bug.txt  logs.txt  personal_commands.txt  pyproject.toml  requirements.txt
data/: phase3_image_manifest.json
data/face_001/: metadata.json
data/face_002/: metadata.json
data/face_003/: metadata.json
data/face_004/: metadata.json
data/face_005/: metadata.json
data/face_006/: metadata.json
data/face_007/: metadata.json
data/face_008/: metadata.json
phase1/: README.md  __init__.py
phase1/configs/: phase1_deepening.json  phase1_prompt_bank.json  phase1_prompt_filtering.json  phase1_screening.json  phase1_selected_prompts.json  phase1c_final_edit_aligned.json  phase1c_parallel.json  phase1c_semantic_scoring.json
phase1/scripts/: __init__.py  a6000_collect_debug_bundle.py  a6000_run.py  a6000_smoke.py  check_clip_semantic.py  rescore_legacy_phase1ab.py  run_clean_baselines.py  run_phase1a_screening.py  run_phase1b_deepen.py  run_phase1c_screening.py  run_phase1d_deepen.py  run_prompt_discovery.py  smoke_instruct_whitebox.py  summarize_phase1.py  summarize_phase1c.py  validate_top_candidates.py
phase1/src/: __init__.py  config.py  data.py  geometry.py  identity.py  instruct_objectives.py  instruct_pipeline.py  masks.py  metrics.py  optimizer.py  parallel_jobs.py  phase1c_objectives.py  phase1c_runner.py  reporting.py  runners.py  utils.py  (+1 more)
phase2/: README.md
phase3/: README.md  __init__.py
phase4/: README.md  __init__.py
scripts/: check_env.py  fix_mediapipe_legacy_a6000.sh  install_linux_a6000.sh  make_debug_bundle.py
(+38793 files in other folders)
